--- a/runtime/proto/BUILD
+++ b/runtime/proto/BUILD
@@ -1,11 +1,11 @@
-load("//third_party/protobuf/bazel:cc_proto_library.bzl", "cc_proto_library")
-load("//third_party/protobuf/bazel:proto_library.bzl", "proto_library")
+load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
+load("@protobuf//bazel:proto_library.bzl", "proto_library")
 
 package(
-    default_applicable_licenses = ["//third_party/odml:license"],
+    default_applicable_licenses = ["//:license"],
     default_hdrs_check = "strict",
     default_visibility = [
-        "//third_party/odml/litert_lm:__subpackages__",
+        "//:__subpackages__",
     ],
 )
 
