--- a/runtime/executor/BUILD
+++ b/runtime/executor/BUILD
@@ -1,22 +1,8 @@
-# Copyright 2024 The ODML Authors.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 package(
-    default_applicable_licenses = ["//third_party/odml:license"],
+    default_applicable_licenses = ["//:license"],
     default_hdrs_check = "strict",
     default_visibility = [
-        "//visibility:public",
+        "//:__subpackages__",
     ],
 )
 
@@ -168,8 +154,6 @@ cc_library(
         "@abseil-cpp//absl/status",
         "@abseil-cpp//absl/status:statusor",
         "@abseil-cpp//absl/strings",
-        "//third_party/odml/infra/genai/inference/proto:sampler_params_cc_proto",
-        "//third_party/odml/infra/genai/inference/utils/llm_utils:constraint_utils",
         "//runtime/util:logging",
         "//runtime/util:scoped_file",
     ],
