--- a/runtime/executor/BUILD
+++ b/runtime/executor/BUILD
@@ -19,10 +19,10 @@ cc_library(
         "@abseil-cpp//absl/status",
         "@abseil-cpp//absl/status:statusor",
         "@abseil-cpp//absl/strings",
-        "@litert//litert/litert/cc:litert_buffer_ref",
-        "@litert//litert/litert/cc:litert_expected",
-        "@litert//litert/litert/cc:litert_model",
-        "@litert//litert/litert/cc:litert_tensor_buffer",
+        "@litert//litert/cc:litert_buffer_ref",
+        "@litert//litert/cc:litert_expected",
+        "@litert//litert/cc:litert_model",
+        "@litert//litert/cc:litert_tensor_buffer",
         "//runtime/util:external_file_cc_proto",
         "//runtime/util:litert_status_util",
         "//runtime/util:model_asset_bundle_resources",
@@ -45,15 +45,15 @@ cc_library(
         "@abseil-cpp//absl/strings",
         "@abseil-cpp//absl/strings:string_view",
         "@abseil-cpp//absl/types:span",
-        "@litert//litert/litert/c:litert_common",
-        "@litert//litert/litert/cc:litert_compiled_model",
-        "@litert//litert/litert/cc:litert_environment",
-        "@litert//litert/litert/cc:litert_expected",
-        "@litert//litert/litert/cc:litert_model",
-        "@litert//litert/litert/cc:litert_options",
-        "@litert//litert/litert/cc:litert_tensor_buffer",
-        "@litert//litert/litert/runtime/accelerators/gpu:accelerator_options",
-        "@litert//litert/litert/runtime/accelerators/gpu:ml_drift_cl_accelerator",
+        "@litert//litert/c:litert_common",
+        "@litert//litert/cc:litert_compiled_model",
+        "@litert//litert/cc:litert_environment",
+        "@litert//litert/cc:litert_expected",
+        "@litert//litert/cc:litert_model",
+        "@litert//litert/cc:litert_options",
+        "@litert//litert/cc:litert_tensor_buffer",
+        "@litert//litert/runtime/accelerators/gpu:accelerator_options",
+        "@litert//litert/runtime/accelerators/gpu:ml_drift_cl_accelerator",
         "//runtime/components:top_p_cpu_sampler",
         "//runtime/util:convert_tensor_buffer",
         "//runtime/util:litert_status_util",
@@ -72,9 +72,9 @@ cc_test(
         "@com_google_googletest//:gtest_main",
         "@abseil-cpp//absl/status:statusor",
         "@abseil-cpp//absl/strings:string_view",
-        "@litert//litert/litert/cc:litert_buffer_ref",
-        "@litert//litert/litert/cc:litert_expected",
-        "@litert//litert/litert/cc:litert_model",
+        "@litert//litert/cc:litert_buffer_ref",
+        "@litert//litert/cc:litert_expected",
+        "@litert//litert/cc:litert_model",
         "//runtime/util:litert_status_util",
         "//runtime/util:model_asset_bundle_resources",
     ],
@@ -94,7 +94,7 @@ cc_library(
         "@abseil-cpp//absl/strings:string_view",
         "@abseil-cpp//absl/time",
         "@abseil-cpp//absl/types:span",
-        "@litert//litert/litert/cc:litert_tensor_buffer",
+        "@litert//litert/cc:litert_tensor_buffer",
         "//runtime/util:convert_tensor_buffer",
         "//runtime/util:litert_status_util",
     ],
@@ -131,7 +131,7 @@ cc_library(
         "@abseil-cpp//absl/status:statusor",
         "@abseil-cpp//absl/strings",
         "@abseil-cpp//absl/strings:string_view",
-        "@litert//litert/litert/cc:litert_tensor_buffer",
+        "@litert//litert/cc:litert_tensor_buffer",
     ],
 )
 
@@ -141,10 +141,10 @@ cc_test(
     deps = [
         ":llm_executor",
         "@com_google_googletest//:gtest_main",
-        "@litert//litert/litert/c:litert_tensor_buffer",
-        "@litert//litert/litert/cc:litert_element_type",
-        "@litert//litert/litert/cc:litert_model",
-        "@litert//litert/litert/cc:litert_tensor_buffer",
+        "@litert//litert/c:litert_tensor_buffer",
+        "@litert//litert/cc:litert_element_type",
+        "@litert//litert/cc:litert_model",
+        "@litert//litert/cc:litert_tensor_buffer",
     ],
 )
 
@@ -176,7 +176,7 @@ cc_library(
     srcs = ["llm_executor_io_types.cc"],
     hdrs = ["llm_executor_io_types.h"],
     deps = [
-        "@litert//litert/litert/cc:litert_tensor_buffer",
+        "@litert//litert/cc:litert_tensor_buffer",
         "//runtime/util:logging_tensor_buffer",
     ],
 )
@@ -187,10 +187,10 @@ cc_test(
     deps = [
         ":llm_executor_io_types",
         "@com_google_googletest//:gtest_main",
-        "@litert//litert/litert/c:litert_dispatch_headers",
-        "@litert//litert/litert/cc:litert_element_type",
-        "@litert//litert/litert/cc:litert_layout",
-        "@litert//litert/litert/cc:litert_model",
-        "@litert//litert/litert/cc:litert_tensor_buffer",
+        "@litert//litert/c:litert_dispatch_headers",
+        "@litert//litert/cc:litert_element_type",
+        "@litert//litert/cc:litert_layout",
+        "@litert//litert/cc:litert_model",
+        "@litert//litert/cc:litert_tensor_buffer",
     ],
 )
