Use WORKSPACE instead of MODULE.bazel.
- MODULE.bazel is a new way to setup dependencies.
- Follow litert and tensorflow to use WORKSPACE for easier setup.

LiteRT-LM-PiperOrigin-RevId: 751859101

--- a/.bazelrc
+++ b/.bazelrc
@@ -39,6 +39,8 @@
 #     elinux_armhf:    Embedded Linux options for armhf (ARMv7) CPU support.
 #
 # Default build options. These are applied first and unconditionally.
+build --action_env=CC=clang
+build --action_env=CXX=clang++
 
 # For projects which use TensorFlow as part of a Bazel build process, putting
 # nothing in a bazelrc will default to a monolithic build. The following line
