Rename repos to align with ones in litert
LiteRT-LM-PiperOrigin-RevId: 751859101

--- a/runtime/util/BUILD
+++ b/runtime/util/BUILD
@@ -1,4 +1,3 @@
-load("@protobuf//bazel:proto_library.bzl", "proto_library")
 
 package(
     default_applicable_licenses = ["//:license"],
@@ -237,7 +236,7 @@ cc_library(
     hdrs = ["zip_readonly_mem_file.h"],
     deps = [
         "@com_google_absl//absl/strings",
-        "@minizip-ng//:zlib_minizip",
+        "@minizip//:zlib_minizip",
         "@zlib//:zlib",
     ],
 )
@@ -258,7 +257,7 @@ cc_library(
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings:string_view",
-        "@minizip-ng//:zlib_minizip",
+        "@minizip//:zlib_minizip",
         "@litert//litert/cc:litert_macros",
         "@zlib//:zlib",
     ],
