--- a/runtime/executor/BUILD
+++ b/runtime/executor/BUILD
@@ -14,11 +14,11 @@ cc_library(
     srcs = ["litert_compiled_model_executor_utils.cc"],
     hdrs = ["litert_compiled_model_executor_utils.h"],
     deps = [
-        "@abseil-cpp//absl/container:btree",
-        "@abseil-cpp//absl/container:flat_hash_set",
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings",
+        "@com_google_absl//absl/container:btree",
+        "@com_google_absl//absl/container:flat_hash_set",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
         "@litert//litert/cc:litert_buffer_ref",
         "@litert//litert/cc:litert_expected",
         "@litert//litert/cc:litert_model",
@@ -37,14 +37,14 @@ cc_library(
         ":litert_compiled_model_executor_utils",
         ":llm_executor",
         ":llm_executor_settings",
-        "@abseil-cpp//absl/container:flat_hash_map",
-        "@abseil-cpp//absl/log:absl_log",
-        "@abseil-cpp//absl/memory",
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings",
-        "@abseil-cpp//absl/strings:string_view",
-        "@abseil-cpp//absl/types:span",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/log:absl_log",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:string_view",
+        "@com_google_absl//absl/types:span",
         "@litert//litert/c:litert_common",
         "@litert//litert/cc:litert_compiled_model",
         "@litert//litert/cc:litert_environment",
@@ -68,8 +68,8 @@ cc_test(
         ":llm_executor_settings",
         ":llm_litert_compiled_model_executor",
         "@com_google_googletest//:gtest_main",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings:string_view",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:string_view",
         "@litert//litert/cc:litert_buffer_ref",
         "@litert//litert/cc:litert_expected",
         "@litert//litert/cc:litert_model",
@@ -86,12 +86,12 @@ cc_library(
         ":llm_executor",
         ":llm_executor_base",
         ":llm_executor_settings",
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings",
-        "@abseil-cpp//absl/strings:string_view",
-        "@abseil-cpp//absl/time",
-        "@abseil-cpp//absl/types:span",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:string_view",
+        "@com_google_absl//absl/time",
+        "@com_google_absl//absl/types:span",
         "@litert//litert/cc:litert_tensor_buffer",
         "//runtime/util:convert_tensor_buffer",
         "//runtime/util:litert_status_util",
@@ -105,8 +105,8 @@ cc_test(
         ":fake_llm_executor",
         ":llm_executor",
         "@com_google_googletest//:gtest_main",
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/types:span",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/types:span",
         "//runtime/util:convert_tensor_buffer",
     ],
 )
@@ -125,10 +125,10 @@ cc_library(
     name = "llm_executor_base",
     hdrs = ["llm_executor_base.h"],
     deps = [
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings",
-        "@abseil-cpp//absl/strings:string_view",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:string_view",
         "@litert//litert/cc:litert_tensor_buffer",
     ],
 )
@@ -151,9 +151,9 @@ cc_library(
     srcs = ["llm_executor_settings.cc"],
     hdrs = ["llm_executor_settings.h"],
     deps = [
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
         "//runtime/util:logging",
         "//runtime/util:scoped_file",
     ],
@@ -165,7 +165,7 @@ cc_test(
     deps = [
         ":llm_executor_settings",
         "@com_google_googletest//:gtest_main",
-        "@abseil-cpp//absl/status",
+        "@com_google_absl//absl/status",
     ],
 )
 
