--- a/runtime/components/BUILD
+++ b/runtime/components/BUILD
@@ -12,10 +12,10 @@ cc_library(
     name = "tokenizer",
     hdrs = ["tokenizer.h"],
     deps = [
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings:string_view",
-        "@abseil-cpp//absl/types:span",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:string_view",
+        "@com_google_absl//absl/types:span",
         "@litert//litert/cc:litert_macros",
         "@litert//litert/cc:litert_tensor_buffer",
         "//runtime/util:convert_tensor_buffer",
@@ -27,11 +27,11 @@ cc_library(
     srcs = ["sampling_cpu_util.cc"],
     hdrs = ["sampling_cpu_util.h"],
     deps = [
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings",
-        "@abseil-cpp//absl/strings:str_format",
-        "@abseil-cpp//absl/types:span",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:str_format",
+        "@com_google_absl//absl/types:span",
     ],
 )
 
@@ -39,7 +39,7 @@ cc_library(
     name = "sampler",
     hdrs = ["sampler.h"],
     deps = [
-        "@abseil-cpp//absl/status",
+        "@com_google_absl//absl/status",
         "@litert//litert/cc:litert_tensor_buffer",
     ],
 )
@@ -50,7 +50,7 @@ cc_test(
     deps = [
         ":sampling_cpu_util",
         "@com_google_googletest//:gtest_main",
-        "@abseil-cpp//absl/types:span",
+        "@com_google_absl//absl/types:span",
     ],
 )
 
@@ -60,10 +60,10 @@ cc_library(
     hdrs = ["sentencepiece_tokenizer.h"],
     deps = [
         ":tokenizer",
-        "@abseil-cpp//absl/memory",
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings:string_view",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:string_view",
         "@sentencepiece//:sentencepiece_processor",
     ],
 )
@@ -75,10 +75,10 @@ cc_test(
     deps = [
         ":sentencepiece_tokenizer",
         "@com_google_googletest//:gtest_main",
-        "@abseil-cpp//absl/cleanup",
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings",
+        "@com_google_absl//absl/cleanup",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
         "@litert//litert/cc:litert_layout",
         "@litert//litert/cc:litert_tensor_buffer",
         "//runtime/util:convert_tensor_buffer",
@@ -90,10 +90,10 @@ cc_library(
     srcs = ["token_id_util.cc"],
     hdrs = ["token_id_util.h"],
     deps = [
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings:str_format",
-        "@abseil-cpp//absl/types:span",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings:str_format",
+        "@com_google_absl//absl/types:span",
     ],
 )
 
@@ -103,7 +103,7 @@ cc_test(
     deps = [
         ":token_id_util",
         "@com_google_googletest//:gtest_main",
-        "@abseil-cpp//absl/status",
+        "@com_google_absl//absl/status",
     ],
 )
 
@@ -114,11 +114,11 @@ cc_library(
     deps = [
         ":sampler",
         ":sampling_cpu_util",
-        "@abseil-cpp//absl/memory",
-        "@abseil-cpp//absl/status",
-        "@abseil-cpp//absl/status:statusor",
-        "@abseil-cpp//absl/strings",
-        "@abseil-cpp//absl/types:span",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:span",
         "@litert//litert/cc:litert_macros",
         "@litert//litert/cc:litert_tensor_buffer",
         "//runtime/util:convert_tensor_buffer",
@@ -132,7 +132,7 @@ cc_test(
     deps = [
         ":top_p_cpu_sampler",
         "@com_google_googletest//:gtest_main",
-        "@abseil-cpp//absl/types:span",
+        "@com_google_absl//absl/types:span",
         "@litert//litert/cc:litert_tensor_buffer",
         "//runtime/util:convert_tensor_buffer",
     ],
