--- a/runtime/util/BUILD
+++ b/runtime/util/BUILD
@@ -173,7 +173,6 @@ cc_test(
         ":memory_mapped_file",
         ":scoped_file",
         ":test_utils",
-        "//testing/base/public:gunit",
         "@com_google_googletest//:gtest_main",
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings:string_view",
@@ -283,7 +282,7 @@ cc_library(
     testonly = 1,
     hdrs = ["test_utils.h"],
     deps = [
-        "//testing/base/public:gunit_for_library_testonly",
+        "@com_google_googletest//:gtest_for_library_testonly",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/status:statusor",
         "@litert//litert/cc:litert_macros",
