--- a/runtime/components/BUILD
+++ b/runtime/components/BUILD
@@ -117,6 +117,7 @@ cc_test(
         ":token_id_util",
         "@com_google_googletest//:gtest_main",
         "@com_google_absl//absl/status",
+        "//runtime/util:test_utils",
     ],
 )
 
