Define a CI presubmit to build and test on linux
LiteRT-LM-PiperOrigin-RevId: 752570571

--- a/runtime/components/BUILD
+++ b/runtime/components/BUILD
@@ -94,6 +94,7 @@ cc_test(
         "@com_google_absl//absl/strings",
         "@litert//litert/cc:litert_layout",
         "@litert//litert/cc:litert_tensor_buffer",
+        "@litert//litert/test:matchers",
         "//runtime/util:convert_tensor_buffer",
     ],
 )
